# JobsFitAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  EXECUTION_PLAN.md  Makefile  PROJECT_STATE.md  README.md  app.py  config.example.yaml  docker-compose.yml  main.py  pyproject.toml
backend/: app.py  config.example.yaml  main.py  pyproject.toml
backend/api/: dependencies.py  deps.py
backend/api/routes/: analyzer.py  ats.py  ats_maker.py  auth.py  history.py  improve.py  job_matches.py  matches.py  resume_analyzer.py  resume_improve.py  resumes.py  settings.py
backend/core/: config.py  config_validator.py  database.py  db.py  logger.py  security.py  session.py  settings.py  state.py  uploads.py
backend/extractors/: __init__.py  extract.py  jd.py  resume.py
backend/fetchers/: __init__.py  arbeitnow_fetcher.py  bundesagentur_fetcher.py
backend/frontend/: components.py  results.py
backend/llm/: ollama.py  router.py
backend/matcher/: __init__.py  embedding_model.py  matcher.py  utils.py
backend/matcher/scores/: __init__.py  certifications.py  education.py  experiences.py  languages.py  responsibilities.py  skills.py
backend/models/: __init__.py  user.py
backend/parsers/: __init__.py  resume_parser.py
backend/prompts/: __init__.py  jd_prompt.py  resume_prompt.py
backend/repositories/: analysis_repo.py  cache_repo.py  event_repo.py  match_repo.py  resume_repo.py  settings_repo.py
backend/schemas/: analyzer.py  ats.py  auth.py  common.py  improve.py  matches.py  resume.py
backend/services/: ats.py  job_matcher.py  job_relevance.py  profile_summary.py  relevance.py  resume_rewriter.py  rewrite.py  role_filter.py  summary.py  title_expander.py  vector_store.py
backend/services/extractors/: __init__.py  extract.py  jd.py  jd_extractor.py  pipeline.py  resume.py  resume_extractor.py
backend/services/fetchers/: __init__.py  arbeitnow_fetcher.py  bundesagentur_fetcher.py  enrich.py  job_enricher.py  job_fetcher.py
backend/services/llm/: caller.py  ollama_health.py  router.py
backend/services/llm/providers/: groq.py  ollama.py  openai.py
backend/services/matcher/: __init__.py  embedding_model.py  engine.py  matcher.py  scoring_utils.py  skill_aliases.py  utils.py
backend/services/matcher/scores/: __init__.py  certifications.py  education.py  experiences.py  languages.py  responsibilities.py  skills.py
backend/services/parsers/: __init__.py  docx_parser.py  file_parser.py  file_validator.py  pdf_parser.py  resume_parser.py  text_cleaner.py  validator.py
backend/services/prompts/: __init__.py  jd_prompt.py  resume_prompt.py
backend/src/extractors/: extract.py  jd.py
backend/src/matcher/: __init__.py  matcher.py
backend/src/parsers/: __init__.py  docx_parser.py  pdf_parser.py  validator.py
backend/src/prompts/: __init__.py
backend/src/services/: ats.py  event_store.py  job_matcher.py  resume_store.py  vector_store.py
backend/src/utils/: session.py
backend/tests/: conftest.py  test_contract.py  test_matcher.py
frontend/: index.html  (+4 more)
(+125 files in other folders)
