[project]
name = "jobfitai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "docx2pdf>=0.1.8",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "streamlit>=1.55.0",
    "transformers>=5.3.0",
]
