[project]
name = "jobfitai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2pdf>=0.1.8",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "keybert>=0.9.0",
    "nicegui>=3.8.0",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
