[project]
name = "jobfitai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2pdf>=0.1.8",
    "dotenv>=0.9.9",
    "groq>=1.1.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "keybert>=0.9.0",
    "langcodes>=3.5.1",
    "langdetect>=1.0.9",
    "language-data>=1.4.0",
    "nicegui>=3.8.0",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "chromadb>=1.5.9",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.11",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic[email]>=2.12.5",
    "libsql-client>=0.3.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]

[tool.ruff.lint]
# E402 is suppressed per-file for modules that intentionally defer imports:
#   app.py       - logger must be initialised before src imports trigger their own loggers
#   config.py    - settings import is deferred to break a circular dependency
#   utils.py     - sentence-transformers import is deferred (heavy, only needed on first call)
[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
"src/utils/config.py" = ["E402"]
"src/matcher/utils.py" = ["E402"]
